# ecare

./: .gitmodules  README.md
include/: ellipse.hpp
scripts/: ellipse_fitting.m  matrix_test.m  test.m
src/: CMakeLists.txt  ecare.cpp  ellipse.cpp
src/scripts/: ellipse_fitting.m  ellipse_parameter_unnormalize.htm
src/test/: matrix_test.cpp
